[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"
name = "csidh"
version = "0.1.0"
[dependencies]
byteorder = "1.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"

[lib]
doctest = true
edition = "2018"
name = "csidh"
path = "src/lib.rs"

[profile.release]
codegen-units = 16
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false

