[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"
name = "csidh"
version = "0.1.0"
[dependencies]
byteorder = "1.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1.0"

[lib]
doctest = true
edition = "2018"
name = "csidh"
path = "src/lib.rs"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 16
rpath = false
